--- a/appsettings.json
+++ b/appsettings.json
@@ -12,8 +12,8 @@
   },
   "JWT": {
     "Secret": "ebcb61b8-524c-48ed-b0d2-2b7b1847d750",
-    "Issuer": "http://localhost:7212",
-    "Audience": "http://localhost:7212",
+    "Issuer": "https://localhost:7044",
+    "Audience": "https://localhost:7044",
     "Expiration": 120
   }
 }
